successfully deployed bentoml

--- a/experiments/workload-config.ipynb
+++ b/experiments/workload-config.ipynb
@@ -43,16 +43,13 @@
      "data": {
       "text/plain": [
        "{'name': 'bentoml-iris',\n",
-       " 'image': 'ghcr.io/nimamahmoudi/conc-workloads-bench1:sha-5966a0e',\n",
-       " 'env': {'EXPERIMENT_NAME': 'TEST1',\n",
-       "  'REPORT_INTERVAL': '10',\n",
-       "  'SOCKETIO_SERVER': 'NO'},\n",
+       " 'image': 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447',\n",
+       " 'env': {},\n",
        " 'opts': {'--limit': \"'cpu=250m,memory=512Mi'\"},\n",
-       " 'annotations': {'autoscaling.knative.dev/panicThresholdPercentage': '1000',\n",
-       "  'autoscaling.knative.dev/target': 1,\n",
-       "  'autoscaling.knative.dev/metric': 'rps'},\n",
+       " 'annotations': {'autoscaling.knative.dev/target': 1,\n",
+       "  'autoscaling.knative.dev/metric': 'concurrency'},\n",
        " 'request_func': 'bentoml-iris',\n",
-       " 'is_rps': True}"
+       " 'is_rps': False}"
       ]
      },
      "metadata": {},
@@ -61,15 +58,16 @@
    ],
    "source": [
     "workload_name = 'bentoml-iris'\n",
-    "image = 'ghcr.io/nimamahmoudi/conc-workloads-bench1:sha-5966a0e'\n",
+    "image = 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447'\n",
     "env = {\n",
-    "    'EXPERIMENT_NAME': 'TEST1',\n",
-    "    'REPORT_INTERVAL': '10',\n",
-    "    'SOCKETIO_SERVER': 'NO',\n",
+    "    # 'EXPERIMENT_NAME': 'TEST1',\n",
+    "    # 'REPORT_INTERVAL': '10',\n",
+    "    # 'SOCKETIO_SERVER': 'NO',\n",
     "}\n",
     "request_func = 'bentoml-iris'\n",
-    "exp_name = request_func + '-' + '250m-512mb'\n",
-    "is_rps = True\n",
+    "suffix = '250m-512mb'\n",
+    "exp_name = request_func + '-' + suffix\n",
+    "is_rps = False\n",
     "\n",
     "opts = {\n",
     "    '--limit': \"'cpu=250m,memory=512Mi'\",\n",
@@ -79,7 +77,7 @@
     "    # '--autoscale-window': '60s',\n",
     "}\n",
     "annotations = {\n",
-    "    'autoscaling.knative.dev/panicThresholdPercentage': '1000',\n",
+    "    # 'autoscaling.knative.dev/panicThresholdPercentage': '1000',\n",
     "    'autoscaling.knative.dev/target': 1,\n",
     "}\n",
     "# source: https://knative.dev/docs/serving/autoscaling/rps-target/\n",
