successfully deployed bentoml onnx resnet50

--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -82,7 +82,8 @@
     }
    ],
    "source": [
-    "EXP_CONFIG_NAME_DEFAULT = 'bentoml-iris-250m-512mb'\n",
+    "# EXP_CONFIG_NAME_DEFAULT = 'bentoml-iris-250m-512mb'\n",
+    "EXP_CONFIG_NAME_DEFAULT = 'bentoml-onnx-resnet50-250m-512mb'\n",
     "exp_config_name = os.getenv(\"DEPLOYMENT_CONFIG_NAME\", EXP_CONFIG_NAME_DEFAULT)\n",
     "exp_file = f\"deployments/{exp_config_name}.json\"\n",
     "\n",
