--- a/experiments/workload-config.ipynb
+++ b/experiments/workload-config.ipynb
@@ -42,13 +42,13 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'name': 'bentoml-iris',\n",
-       " 'image': 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447',\n",
+       "{'name': 'bentoml-onnx-resnet50',\n",
+       " 'image': 'ghcr.io/nimamahmoudi/bentoml-onnx-resnet50:20210430002258',\n",
        " 'env': {},\n",
        " 'opts': {'--limit': \"'cpu=250m,memory=512Mi'\"},\n",
        " 'annotations': {'autoscaling.knative.dev/target': 1,\n",
        "  'autoscaling.knative.dev/metric': 'concurrency'},\n",
-       " 'request_func': 'bentoml-iris',\n",
+       " 'request_func': 'bentoml-onnx-resnet50',\n",
        " 'is_rps': False}"
       ]
      },
@@ -57,14 +57,14 @@
     }
    ],
    "source": [
-    "workload_name = 'bentoml-iris'\n",
-    "image = 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447'\n",
-    "env = {\n",
-    "    # 'EXPERIMENT_NAME': 'TEST1',\n",
-    "    # 'REPORT_INTERVAL': '10',\n",
-    "    # 'SOCKETIO_SERVER': 'NO',\n",
-    "}\n",
-    "request_func = 'bentoml-iris'\n",
+    "# workload_name = 'bentoml-iris'\n",
+    "# image = 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447'\n",
+    "\n",
+    "workload_name = 'bentoml-onnx-resnet50'\n",
+    "image = 'ghcr.io/nimamahmoudi/bentoml-onnx-resnet50:20210430002258'\n",
+    "\n",
+    "env = {}\n",
+    "request_func = workload_name\n",
     "suffix = '250m-512mb'\n",
     "exp_name = request_func + '-' + suffix\n",
     "is_rps = False\n",
