--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -59,7 +59,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "NAME            URL                                            LATEST                AGE     CONDITIONS   READY   REASON\nautoscale-go    http://autoscale-go.default.kn.nima-dev.com    autoscale-go-00035    89d     3 OK / 3     True    \nbench1          http://bench1.default.kn.nima-dev.com          bench1-00054          97d     3 OK / 3     True    \nbentoml-iris    http://bentoml-iris.default.kn.nima-dev.com    bentoml-iris-00001    3m17s   3 OK / 3     True    \nhelloworld-go   http://helloworld-go.default.kn.nima-dev.com   helloworld-go-00001   99d     3 OK / 3     True    \n"
+      "NAME            URL                                            LATEST                AGE   CONDITIONS   READY   REASON\nautoscale-go    http://autoscale-go.default.kn.nima-dev.com    autoscale-go-00035    89d   3 OK / 3     True    \nbench1          http://bench1.default.kn.nima-dev.com          bench1-00054          97d   3 OK / 3     True    \nbentoml-iris    http://bentoml-iris.default.kn.nima-dev.com    bentoml-iris-00002    12m   3 OK / 3     True    \nhelloworld-go   http://helloworld-go.default.kn.nima-dev.com   helloworld-go-00001   99d   3 OK / 3     True    \n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "kn service apply bentoml-iris --image ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447 \\\n  --limit 'cpu=250m,memory=512Mi' \\\n  -a autoscaling.knative.dev/target=1 \\\n  -a autoscaling.knative.dev/metric=concurrency\n"
+      "kn service apply bentoml-onnx-resnet50 --image ghcr.io/nimamahmoudi/bentoml-onnx-resnet50:20210430002258 \\\n  --limit 'cpu=250m,memory=512Mi' \\\n  -a autoscaling.knative.dev/target=1 \\\n  -a autoscaling.knative.dev/metric=concurrency\n"
      ]
     }
    ],
@@ -106,16 +106,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Applying service 'bentoml-iris' in namespace 'default':\n",
+      "Creating service 'bentoml-onnx-resnet50' in namespace 'default':\n",
       "\n",
-      "  0.046s The Configuration is still working to reflect the latest desired specification.\n",
-      " 37.554s Traffic is not yet migrated to the latest revision.\n",
-      " 37.649s Ingress has not yet been reconciled.\n",
-      " 37.674s Waiting for load balancer to be ready\n",
-      " 37.912s Ready to serve.\n",
+      "  0.122s The Route is still working to reflect the latest desired specification.\n",
+      "  0.207s Configuration \"bentoml-onnx-resnet50\" is waiting for a Revision to become ready.\n",
+      " 60.793s ...\n",
+      " 60.850s Ingress has not yet been reconciled.\n",
+      " 60.983s Waiting for load balancer to be ready\n",
+      " 61.123s Ready to serve.\n",
       "\n",
-      "Service 'bentoml-iris' applied to latest revision 'bentoml-iris-00002' is available at URL:\n",
-      "http://bentoml-iris.default.kn.nima-dev.com\n"
+      "Service 'bentoml-onnx-resnet50' created to latest revision 'bentoml-onnx-resnet50-00001' is available at URL:\n",
+      "http://bentoml-onnx-resnet50.default.kn.nima-dev.com\n"
      ]
     }
    ],
