--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -59,7 +59,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "NAME            URL                                            LATEST                AGE   CONDITIONS   READY   REASON\nautoscale-go    http://autoscale-go.default.kn.nima-dev.com    autoscale-go-00035    89d   3 OK / 3     True    \nbench1          http://bench1.default.kn.nima-dev.com          bench1-00054          97d   3 OK / 3     True    \nbentoml-iris    http://bentoml-iris.default.kn.nima-dev.com    bentoml-iris-00002    12m   3 OK / 3     True    \nhelloworld-go   http://helloworld-go.default.kn.nima-dev.com   helloworld-go-00001   99d   3 OK / 3     True    \n"
+      "NAME                    URL                                                    LATEST                        AGE     CONDITIONS   READY   REASON\nautoscale-go            http://autoscale-go.default.kn.nima-dev.com            autoscale-go-00035            89d     3 OK / 3     True    \nbench1                  http://bench1.default.kn.nima-dev.com                  bench1-00054                  97d     3 OK / 3     True    \nbentoml-iris            http://bentoml-iris.default.kn.nima-dev.com            bentoml-iris-00002            73m     3 OK / 3     True    \nbentoml-onnx-resnet50   http://bentoml-onnx-resnet50.default.kn.nima-dev.com   bentoml-onnx-resnet50-00001   61m     3 OK / 3     True    \nhelloworld-go           http://helloworld-go.default.kn.nima-dev.com           helloworld-go-00001           99d     3 OK / 3     True    \ntfserving-resnetv2      http://tfserving-resnetv2.default.kn.nima-dev.com      tfserving-resnetv2-00001      3m17s   3 OK / 3     True    \n"
      ]
     }
    ],
@@ -77,13 +77,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "kn service apply bentoml-onnx-resnet50 --image ghcr.io/nimamahmoudi/bentoml-onnx-resnet50:20210430002258 \\\n  --limit 'cpu=250m,memory=512Mi' \\\n  -a autoscaling.knative.dev/target=1 \\\n  -a autoscaling.knative.dev/metric=concurrency\n"
+      "kn service apply tfserving-mobilenetv1 --image ghcr.io/nimamahmoudi/tfserving-mobilenet:20210430005829 \\\n  --limit 'cpu=250m,memory=512Mi' \\\n  --port 5000 \\\n  -a autoscaling.knative.dev/target=1 \\\n  -a autoscaling.knative.dev/metric=concurrency\n"
      ]
     }
    ],
    "source": [
     "# EXP_CONFIG_NAME_DEFAULT = 'bentoml-iris-250m-512mb'\n",
-    "EXP_CONFIG_NAME_DEFAULT = 'bentoml-onnx-resnet50-250m-512mb'\n",
+    "# EXP_CONFIG_NAME_DEFAULT = 'bentoml-onnx-resnet50-250m-512mb'\n",
+    "# EXP_CONFIG_NAME_DEFAULT = 'tfserving-resnetv2-250m-512mb'\n",
+    "EXP_CONFIG_NAME_DEFAULT = 'tfserving-mobilenetv1-250m-512mb'\n",
     "exp_config_name = os.getenv(\"DEPLOYMENT_CONFIG_NAME\", EXP_CONFIG_NAME_DEFAULT)\n",
     "exp_file = f\"deployments/{exp_config_name}.json\"\n",
     "\n",
@@ -106,17 +108,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Creating service 'bentoml-onnx-resnet50' in namespace 'default':\n",
+      "Creating service 'tfserving-mobilenetv1' in namespace 'default':\n",
       "\n",
-      "  0.122s The Route is still working to reflect the latest desired specification.\n",
-      "  0.207s Configuration \"bentoml-onnx-resnet50\" is waiting for a Revision to become ready.\n",
-      " 60.793s ...\n",
-      " 60.850s Ingress has not yet been reconciled.\n",
-      " 60.983s Waiting for load balancer to be ready\n",
-      " 61.123s Ready to serve.\n",
+      "  0.117s The Route is still working to reflect the latest desired specification.\n",
+      "  0.516s Configuration \"tfserving-mobilenetv1\" is waiting for a Revision to become ready.\n",
+      " 10.960s ...\n",
+      " 11.061s Ingress has not yet been reconciled.\n",
+      " 11.118s Waiting for load balancer to be ready\n",
+      " 11.497s Ready to serve.\n",
       "\n",
-      "Service 'bentoml-onnx-resnet50' created to latest revision 'bentoml-onnx-resnet50-00001' is available at URL:\n",
-      "http://bentoml-onnx-resnet50.default.kn.nima-dev.com\n"
+      "Service 'tfserving-mobilenetv1' created to latest revision 'tfserving-mobilenetv1-00001' is available at URL:\n",
+      "http://tfserving-mobilenetv1.default.kn.nima-dev.com\n"
      ]
     }
    ],
