--- a/experiments/workload-config.ipynb
+++ b/experiments/workload-config.ipynb
@@ -42,13 +42,15 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'name': 'tfserving-mobilenetv1',\n",
-       " 'image': 'ghcr.io/nimamahmoudi/tfserving-mobilenet:20210430005829',\n",
+       "{'name': 'bentoml-iris',\n",
+       " 'image': 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447',\n",
        " 'env': {},\n",
-       " 'opts': {'--limit': \"'cpu=250m,memory=512Mi'\", '--port': '5000'},\n",
+       " 'opts': {'--limit': \"'cpu=250m,memory=512Mi'\",\n",
+       "  '--request': \"'cpu=250m,memory=512Mi'\",\n",
+       "  '--port': '5000'},\n",
        " 'annotations': {'autoscaling.knative.dev/target': 1,\n",
        "  'autoscaling.knative.dev/metric': 'concurrency'},\n",
-       " 'request_func': 'tfserving-mobilenetv1',\n",
+       " 'request_func': 'bentoml-iris',\n",
        " 'is_rps': False}"
       ]
      },
@@ -57,9 +59,9 @@
     }
    ],
    "source": [
-    "# workload_name = 'bentoml-iris'\n",
-    "# image = 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447'\n",
-    "# port = 5000\n",
+    "workload_name = 'bentoml-iris'\n",
+    "image = 'ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447'\n",
+    "port = 5000\n",
     "\n",
     "# workload_name = 'bentoml-onnx-resnet50'\n",
     "# image = 'ghcr.io/nimamahmoudi/bentoml-onnx-resnet50:20210430002258'\n",
@@ -69,9 +71,9 @@
     "# image = 'ghcr.io/nimamahmoudi/tfserving-resnet:20210429213000'\n",
     "# port = 5000\n",
     "\n",
-    "workload_name = 'tfserving-mobilenetv1'\n",
-    "image = 'ghcr.io/nimamahmoudi/tfserving-mobilenet:20210430005829'\n",
-    "port = 5000\n",
+    "# workload_name = 'tfserving-mobilenetv1'\n",
+    "# image = 'ghcr.io/nimamahmoudi/tfserving-mobilenet:20210430005829'\n",
+    "# port = 5000\n",
     "\n",
     "env = {}\n",
     "request_func = workload_name\n",
@@ -81,6 +83,7 @@
     "\n",
     "opts = {\n",
     "    '--limit': \"'cpu=250m,memory=512Mi'\",\n",
+    "    '--request': \"'cpu=250m,memory=512Mi'\",\n",
     "    '--port': f\"{port}\",\n",
     "    # '--concurrency-target': '1',\n",
     "    # '--concurrency-limit': '10',\n",
