--- a/experiments/03-profile-workload-functions.ipynb
+++ b/experiments/03-profile-workload-functions.ipynb
@@ -278,28 +278,28 @@
     "        'total_req_count': 1000,\n",
     "        'service_name': 'bentoml-iris',\n",
     "        'batch_size': [1,5,10,20,50,100],\n",
-    "        'cpus': [250,500,1000,1500,2000],\n",
+    "        'cpu_m': [250,500,1000,1500,2000],\n",
     "    },\n",
     "    {\n",
     "        'warmup_req_count': 20,\n",
     "        'total_req_count': 1000,\n",
     "        'service_name': 'tfserving-resnetv2',\n",
     "        'batch_size': [1,2,3,5,10],\n",
-    "        'cpus': [250,500,1000,1500,2000],\n",
+    "        'cpu_m': [250,500,1000,1500,2000],\n",
     "    },\n",
     "    {\n",
     "        'warmup_req_count': 20,\n",
     "        'total_req_count': 1000,\n",
     "        'service_name': 'tfserving-mobilenetv1',\n",
     "        'batch_size': [1,2,3,5],\n",
-    "        'cpus': [250,500,1000,1500,2000],\n",
+    "        'cpu_m': [250,500,1000,1500,2000],\n",
     "    },\n",
     "    {\n",
     "        'warmup_req_count': 20,\n",
     "        'total_req_count': 1000,\n",
     "        'service_name': 'bentoml-onnx-resnet50',\n",
     "        'batch_size': [1,2,3,5,10],\n",
-    "        'cpus': [250,500,1000,1500,2000],\n",
+    "        'cpu_m': [250,500,1000,1500,2000],\n",
     "    },\n",
     "]\n",
     "\n",
