new experiment finished

--- a/experiments/04-parse-batch-results.ipynb
+++ b/experiments/04-parse-batch-results.ipynb
@@ -51,10 +51,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['./results/batch_experiments_default/tfserving-mobilenetv1_2021-05-05_13-28-56.csv',\n",
-       " './results/batch_experiments_default/bentoml-iris_2021-05-04_23-40-01.csv',\n",
-       " './results/batch_experiments_default/tfserving-resnetv2_2021-05-05_02-52-19.csv',\n",
-       " './results/batch_experiments_default/bentoml-onnx-resnet50_2021-05-05_15-48-10.csv']"
+       "[]"
       ]
      },
      "metadata": {},
@@ -81,14 +78,14 @@
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "['TFServing MobileNetV1',\n 'BentoML Iris',\n 'TFServing ResNet-v2',\n 'BentoML ONNX ResNet50-v2']"
+      "text/plain": "[]"
      },
      "metadata": {}
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "['tfserving-mobilenetv1_2021-05-05_13-28-56',\n 'bentoml-iris_2021-05-04_23-40-01',\n 'tfserving-resnetv2_2021-05-05_02-52-19',\n 'bentoml-onnx-resnet50_2021-05-05_15-48-10']"
+      "text/plain": "[]"
      },
      "metadata": {}
     }
@@ -119,48 +116,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "./results/batch_experiments_default/bentoml-onnx-resnet50_2021-05-05_15-48-10.csv\nBentoML ONNX ResNet50-v2\nbentoml-onnx-resnet50_2021-05-05_15-48-10\n"
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-aeff73183ad3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# the experiment path that we will use for developing our plots here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# exp_path = [f for f in exp_paths if 'onnx-resnet50' in f][0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mexp_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexp_paths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mexp_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_exp_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   warmup_req_count  total_req_count           service_name  batch_size  \\\n",
-       "0                20             1000  bentoml-onnx-resnet50           1   \n",
-       "1                20             1000  bentoml-onnx-resnet50           2   \n",
-       "2                20             1000  bentoml-onnx-resnet50           3   \n",
-       "3                20             1000  bentoml-onnx-resnet50           5   \n",
-       "4                20             1000  bentoml-onnx-resnet50          10   \n",
-       "\n",
-       "                                   response_times_ms  reqs_failed  \\\n",
-       "0  [152.709, 306.298, 177.49200000000002, 191.816...            0   \n",
-       "1  [308.87399999999997, 375.26, 319.551, 370.321,...            0   \n",
-       "2  [470.497, 519.792, 481.649, 492.203, 495.31199...            0   \n",
-       "3  [765.9240000000001, 793.981, 799.02, 869.553, ...            0   \n",
-       "4  [1587.2820000000002, 1583.96, 1526.718, 1572.8...            0   \n",
-       "\n",
-       "   reqs_succeeded  resp_time_avg  resp_time_p5  resp_time_p50  resp_time_p90  \\\n",
-       "0            1000     225.131654     181.86500       195.1240       319.4727   \n",
-       "1            1000     355.868966     311.24205       360.4905       386.0504   \n",
-       "2            1000     515.770765     485.90175       498.5990       568.8425   \n",
-       "3            1000     829.569899     789.43755       807.2765       878.2019   \n",
-       "4            1000    1629.410061    1535.31360      1602.6795      1719.0038   \n",
-       "\n",
-       "   resp_time_p95  resp_time_p99  request_count  \n",
-       "0      367.55555      572.36841           1000  \n",
-       "1      485.37865      505.49600           1000  \n",
-       "2      669.63950      695.99555           1000  \n",
-       "3      983.93545     1062.94014           1000  \n",
-       "4     1793.40335     1889.88537           1000  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>warmup_req_count</th>\n      <th>total_req_count</th>\n      <th>service_name</th>\n      <th>batch_size</th>\n      <th>response_times_ms</th>\n      <th>reqs_failed</th>\n      <th>reqs_succeeded</th>\n      <th>resp_time_avg</th>\n      <th>resp_time_p5</th>\n      <th>resp_time_p50</th>\n      <th>resp_time_p90</th>\n      <th>resp_time_p95</th>\n      <th>resp_time_p99</th>\n      <th>request_count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20</td>\n      <td>1000</td>\n      <td>bentoml-onnx-resnet50</td>\n      <td>1</td>\n      <td>[152.709, 306.298, 177.49200000000002, 191.816...</td>\n      <td>0</td>\n      <td>1000</td>\n      <td>225.131654</td>\n      <td>181.86500</td>\n      <td>195.1240</td>\n      <td>319.4727</td>\n      <td>367.55555</td>\n      <td>572.36841</td>\n      <td>1000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>20</td>\n      <td>1000</td>\n      <td>bentoml-onnx-resnet50</td>\n      <td>2</td>\n      <td>[308.87399999999997, 375.26, 319.551, 370.321,...</td>\n      <td>0</td>\n      <td>1000</td>\n      <td>355.868966</td>\n      <td>311.24205</td>\n      <td>360.4905</td>\n      <td>386.0504</td>\n      <td>485.37865</td>\n      <td>505.49600</td>\n      <td>1000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20</td>\n      <td>1000</td>\n      <td>bentoml-onnx-resnet50</td>\n      <td>3</td>\n      <td>[470.497, 519.792, 481.649, 492.203, 495.31199...</td>\n      <td>0</td>\n      <td>1000</td>\n      <td>515.770765</td>\n      <td>485.90175</td>\n      <td>498.5990</td>\n      <td>568.8425</td>\n      <td>669.63950</td>\n      <td>695.99555</td>\n      <td>1000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20</td>\n      <td>1000</td>\n      <td>bentoml-onnx-resnet50</td>\n      <td>5</td>\n      <td>[765.9240000000001, 793.981, 799.02, 869.553, ...</td>\n      <td>0</td>\n      <td>1000</td>\n      <td>829.569899</td>\n      <td>789.43755</td>\n      <td>807.2765</td>\n      <td>878.2019</td>\n      <td>983.93545</td>\n      <td>1062.94014</td>\n      <td>1000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>20</td>\n      <td>1000</td>\n      <td>bentoml-onnx-resnet50</td>\n      <td>10</td>\n      <td>[1587.2820000000002, 1583.96, 1526.718, 1572.8...</td>\n      <td>0</td>\n      <td>1000</td>\n      <td>1629.410061</td>\n      <td>1535.31360</td>\n      <td>1602.6795</td>\n      <td>1719.0038</td>\n      <td>1793.40335</td>\n      <td>1889.88537</td>\n      <td>1000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 4
     }
    ],
    "source": [
